--- a/PaylasimKuresi/Views/Shared/Components/_PostComposerBox/Default.cshtml
+++ b/PaylasimKuresi/Views/Shared/Components/_PostComposerBox/Default.cshtml
@@ -10,7 +10,7 @@
                 </div>
                 <div class="row post-form-group">
                     <div class="col-md-9">
-                        <button type="button" class="btn btn-link post-form-btn btn-sm">
+                        @* <button type="button" class="btn btn-link post-form-btn btn-sm">
                             <i class='bx bx-images'></i> <span>Fotoğraf/Video</span>
                         </button>
                         <button type="button" class="btn btn-link post-form-btn btn-sm">
@@ -18,7 +18,7 @@
                         </button>
                         <button type="button" class="btn btn-link post-form-btn btn-sm">
                             <i class='bx bxs-map'></i> <span>Konum Ekle</span>
-                        </button>
+                        </button> *@
                     </div>
                     <div class="col-md-3 text-right">
                         <button type="submit" class="btn btn-primary btn">Yayınla</button>
