--- a/PaylasimKuresi/Views/LayoutPartial/_HeadPartial.cshtml
+++ b/PaylasimKuresi/Views/LayoutPartial/_HeadPartial.cshtml
@@ -2,9 +2,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/png" href="/template/assets/images/logo-16x16.png" />
+    <link rel="icon" type="image/png" href="/template/assets/images/logo_16x16.png" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Argon - Social Network</title>
+    <title>Paylaşım Küresi</title>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
