--- a/PaylasimKuresi/Views/SignUp/Index.cshtml
+++ b/PaylasimKuresi/Views/SignUp/Index.cshtml
@@ -11,7 +11,7 @@
             <div class="auth-logo text-center">
                 <div class="row">
                     <div class="col-md-2">
-                        <img src="/template/assets/images/logo-64x64.png" class="logo-img" alt="Logo">
+                        <img src="/template/assets/images/logo_64x64.png" class="logo-img" alt="Logo">
                     </div>
                     <div class="col-md-10">
                         <p>Paylaşım Küresi</p>
@@ -101,16 +101,9 @@
     </div>
     <div class="col-md-6 auth-bg-image d-flex justify-content-center align-items-center">
         <div class="auth-left-content mt-5 mb-5 text-center">
-            <div class="weather-small text-white">
-                <p class="current-weather"><i class='bx bx-sun'></i> <span>14&deg;</span></p>
-                <p class="weather-city">Gyumri</p>
-            </div>
             <div class="text-white mt-5 mb-5">
-                <h2 class="create-account mb-3">Create Account</h2>
-                <p>Enter your personal details and start journey with us.</p>
-            </div>
-            <div class="auth-quick-links">
-                <a href="#" class="btn btn-outline-primary">Purchase template</a>
+                <h2 class="create-account mb-3">Yeni Hesap Oluştur</h2>
+                <p>Kişisel bilgilerinizi girin ve bizimle yolculuğa başlayın.</p>
             </div>
         </div>
     </div>
